Hotfix: Cập nhật lại tags và vấn đề focus của search bar
- Chỉnh sửa tags header và footer trong layout.hbs. 
- Search bar bị vấn đề dị là chỉ khi trỏ chuột mới hiện rõ, hotfix bằng cách thêm trạng thái focus-within.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,7 +54,7 @@
   opacity: 0.6;
 }
 
-#searchbar-in-picture:hover{
+#searchbar-in-picture:hover, #searchbar-in-picture:focus-within{
   opacity: 1.0;
 }
 
