--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="container-fluid header-nav fixed-top">
+  <header class="container-fluid header-nav fixed-top">
     <div class="row justify-content-between ">
       <a class="navbar-brand no-padding-top-bot" href="#">
         <img src="/images/logo-khoa.png" alt="" class="logo">
@@ -45,12 +45,12 @@
         </div>
       </nav>
     </div>
-  </div>
+  </header>
 
   {{{body}}}
 
   {{!-- footer cho bottom rộng rộng --}}
-  <div class="container-fluid " style="padding-bottom: 50px;">
+  <footer class="container-fluid " style="padding-bottom: 50px;">
     <div class="row justify-content-around">
       <div class="raw-info">
         <img src="/images/logo-khoa.png" alt="" class="logo">
@@ -68,7 +68,7 @@
         
       </div>
     </div>
-  </div>
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
