Hoàn thành trang thể loại
Thêm route trong app.js và sinh nội dung cứng các thể loại phổ biến.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,3 +73,14 @@
   color: #3498DB;
 }
 
+.categories-item{
+  color: black;
+  border-radius: none;
+  padding: 0px 20px;
+  margin: 0px 10px 10px 10px; 
+
+}
+
+.first-section{
+  margin-top: 60px;
+}
