--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,8 +26,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active-nav nav-item-padding">
-              <a class="nav-link text-white" href="#">Trang chủ</a>
+            <li class="nav-item nav-item-padding">
+              <a class="nav-link text-dark" href="#">Trang chủ</a>
             </li>
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="#">Thể loại</a>
@@ -38,8 +38,8 @@
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="#">Giới thiệu</a>
             </li>
-            <li class="nav-item nav-item-padding">
-              <a class="nav-link text-dark" href="#">Đăng nhập</a>
+            <li class="nav-item active-nav nav-item-padding">
+              <a class="nav-link text-white" href="#">Đăng nhập</a>
             </li>
           </ul>
         </div>
