--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,7 +12,7 @@
                 </div>
                 <div class="login-forget-pass">
                     <button class="login-button font-normal-bold">Đăng nhập</button>
-                    <a href="#" class="forget-pass font-normal-bold">quên mật khẩu</a>
+                    <a href="#" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
                 </div>
             </div>
 
