--- a/public/stylesheets/sign-up.css
+++ b/public/stylesheets/sign-up.css
@@ -1,4 +1,4 @@
-.login-area {
+.sign-up-area {
     width: 100%;
     height: 100%;
     background-color: white;
@@ -13,7 +13,7 @@
     grid-template-columns: 65% auto;
 }
 
-.login {
+.sign-up {
     width: auto;
     padding-left: 20%;
 }
@@ -27,7 +27,7 @@
     padding-top: 4%;
 }
 
-.login-forget-pass {
+.sign-up-but {
     padding-top: 2%
 }
 
@@ -67,7 +67,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 4px 0px;
     border-radius: 50px;
 }
 
