update content bên trong template
Đổi từ "nhớ mk" thành "Đã có tk"

--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -21,7 +21,7 @@
             <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
                 <div style="height: 55%;">
                     <div>Chỉ áp dụng cho tài khoản cntt</div>
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per" style="line-height: 6;">Nhớ ra mật khẩu</span>
+                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per" style="line-height: 6;">Đã có tài khoản</span>
                 </div>
 
                 <div class="login">
