hoan thanh trang chi tiet tin tuc

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,75 +1,107 @@
 * {
-  font-size: 100%;
-  font-family: Roboto;
- }
-
- body {
-  background-color: #ecf0f1;
+    font-size: 100%;
+    font-family: Roboto;
 }
 
-.no-padding-top-bot{
-  padding-top: 0;
-  padding-bottom: 0;
+body {
+    background-color: #ecf0f1;
 }
-.no-padding{
-  padding: 0;
+
+.no-padding-top-bot {
+    padding-top: 0;
+    padding-bottom: 0;
 }
+
+.no-padding {
+    padding: 0;
+}
+
 .active-nav {
-  margin: 0;
-  background-color: #3498db;
+    margin: 0;
+    background-color: #3498db;
 }
+
 .logo {
-  width: 200px;
-  padding: 5px;
-}
-.nav-item-padding{
-  padding: 5px;
+    width: 200px;
+    padding: 5px;
 }
 
-.header-nav{
-  background-color: white;
+.nav-item-padding {
+    padding: 5px;
 }
 
-.icon-footer{
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
+.header-nav {
+    background-color: white;
 }
 
-.title-footer{
-  color: #3498db;
-  font-weight: bold;
-  font-size: 30px;
+.icon-footer {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
 }
 
-.picture-search{
-  background-image: url("/images/background-truong.png");
-  height: 500px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover; 
+.title-footer {
+    color: #3498db;
+    font-weight: bold;
+    font-size: 30px;
 }
 
-#searchbar-in-picture{
-  opacity: 0.6;
+.picture-search {
+    background-image: url("/images/background-truong.png");
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-#searchbar-in-picture:hover, #searchbar-in-picture:focus-within{
-  opacity: 1.0;
+#searchbar-in-picture {
+    opacity: 0.6;
 }
 
-.content-section{
-  margin: 20px 0px;
+#searchbar-in-picture:hover,
+#searchbar-in-picture:focus-within {
+    opacity: 1.0;
 }
 
-.title-section{
-  padding: 25px;
-  color: #3498db;
-  font-weight: bold;
-  font-size: 40px;
-}
-.active-modified-list-cs{
-  background-color: #ECF0F1;
-  color: #3498DB;
+.content-section {
+    margin: 20px 0px;
 }
 
+.title-section {
+    padding: 25px;
+    color: #3498db;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.active-modified-list-cs {
+    background-color: #ECF0F1;
+    color: #3498DB;
+}
+
+.categories-item {
+    color: black;
+    border-radius: none;
+    padding: 0px 20px;
+    margin: 0px 10px 10px 10px;
+}
+
+.first-section {
+    margin-top: 60px;
+}
+
+.font-size-xx {
+    font-size: xx-large;
+}
+
+.text-color-grey {
+    color: gray;
+}
+
+.padding-left-3em {
+    padding-left: 3em;
+}
+
+.padding-2-side-3em {
+    padding: 0 3em;
+}
