them tin tuc vao muc header-layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,7 +39,10 @@
               <a class="nav-link text-dark" href="#">Giới thiệu</a>
             </li>
             <li class="nav-item active-nav nav-item-padding">
-              <a class="nav-link text-white" href="#">Đăng nhập</a>
+              <a class="nav-link text-white" href="#">Tin tức</a>
+            </li>
+            <li class="nav-item nav-item-padding">
+              <a class="nav-link text-dark" href="#">Đăng nhập</a>
             </li>
           </ul>
         </div>
@@ -63,9 +66,9 @@
       <div class="link-info">
         <div class="title-footer">Thông tin</div>
         <div><a href="#" style="color: black;">Website khoa</a></div>
-        <div><a href="#"style="color: black;">Website trường</a></div>
+        <div><a href="#" style="color: black;">Website trường</a></div>
         <div><img src="/images/icon-fb.jpg" class="icon-footer"> <a href="#" style="color: black;">Facebook</a></div>
-        
+
       </div>
     </div>
   </footer>
