--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,10 +98,81 @@ body {
     color: gray;
 }
 
+.text-color-2980B9 {
+    color: #2980B9;
+}
+
+.text-color-408CFF {
+    color: #408CFF;
+}
+
 .padding-left-3em {
     padding-left: 3em;
 }
 
 .padding-2-side-3em {
     padding: 0 3em;
+}
+
+.padding-top-3em {
+    padding-top: 3em;
+}
+
+.display-grid {
+    display: grid;
+}
+
+.display-flex {
+    display: flex;
+}
+
+.grid-8-2 {
+    grid-template-columns: 80% auto;
+}
+
+.book-23-per {
+    width: 23%;
+}
+
+.book-star-review::after,
+.related-book::after {
+    background-color: black;
+    position: relative;
+    width: 100%;
+    height: 1px;
+    content: "";
+    top: 8px;
+    display: block;
+}
+
+.star-checked {
+    color: yellow
+}
+
+.text-center {
+    text-align: center;
+}
+
+.borrow-button {
+    background-color: #3498DB;
+    border: none;
+    color: white;
+    padding: 7px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 50px;
+}
+
+.avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+#comment-box {
+    width: 95%;
+    height: 6em;
 }
