--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,8 +38,8 @@
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="#">Giới thiệu</a>
             </li>
-            <li class="nav-item active-nav nav-item-padding">
-              <a class="nav-link text-white" href="#">Tin tức</a>
+            <li class="nav-item nav-item-padding">
+              <a class="nav-link text-dark" href="#">Tin tức</a>
             </li>
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="#">Đăng nhập</a>
