Khởi tạo trang search cơ bản
Bên trong đã thể hiện được cấu trúc cơ bản, tuy nhiên chưa có sự liên kết:
- Link từ tin tức / sách tới trang tương ứng
- wrap mô tả thành ... với số kí tự cố định
- đổi sang hiển thị kết quả tin tức sau khi chọn dropdown
- chưa đổi text dropdown khi chọn
- wrap kết quả hiển thị cố định và liên kết số lượng page kết quả.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -177,6 +177,18 @@ body {
     height: 6em;
 }
 
+.title-search{
+    font-size: 20px;
+    font-weight: bold;
+    color: #3498DB;
+}
+.author-search{
+    color: #3498DB;
+}
+.date-search{
+    color: grey;
+}
+
 img {
     max-width:100%;
     max-height:100%;
