--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -189,7 +189,12 @@ body {
     color: grey;
 }
 
+/* Tắt gạch chân khó chịu */
+a {
+    text-decoration: none !important;
+}
+
 img {
-    max-width:100%;
-    max-height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
