--- a/views/search.hbs
+++ b/views/search.hbs
@@ -2,11 +2,11 @@
     <div class="content-section first-section bg-white no-padding">
         <div class="row justify-content-center" style="padding-top:50px">
             <div class="dropdown">
-                <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
+                <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_searchtype"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Sách
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <div id="dropdown_searchtype_content" class="dropdown-menu" aria-labelledby="dropdown_searchtype">
                     <a class="dropdown-item" href="#">Sách</a>
                     <a class="dropdown-item" href="#">Tin tức</a>
                 </div>
@@ -29,11 +29,11 @@
                 <div>Sắp xếp theo </div>
 
                 <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
+                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_filtertype"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Độ phổ biến
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <div id="dropdown_filtertype_content" class="dropdown-menu" aria-labelledby="dropdown_filtertype">
                         <a class="dropdown-item" href="#">Độ phổ biến</a>
                         <a class="dropdown-item" href="#">Gần nhất</a>
                     </div>
@@ -42,21 +42,47 @@
             <div class="col row justify-content-center">+ Thêm bộ lọc</div>
             <div class="col-1"></div>
         </div>
-        {{#each book_result}}
-        <div class="row justify-content-center" style="padding: 10px;">
-            <div class="col-2">
-                <div class="d-flex justify-content-end">
-                    <img src={{this.thumbnail}} alt="" style="height: 150px;">
+        <div id="book_result_section">
+            {{#each book_result}}
+            <a href="#">
+                <div class="row justify-content-center" style="padding: 10px;">
+                    <div class="col-2">
+                        <div class="d-flex justify-content-end">
+                            <img src={{this.thumbnail}} alt="" style="height: 150px;">
 
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class=" title-search">{{this.name}}</div>
+                        <div class="author-search">{{this.author}}</div>
+                        <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.description}}</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-8">
-                <div class=" title-search">{{this.name}}</div>
-                <div class="author-search">{{this.author}}</div>
-                <div style="overflow:hidden; text-overflow: ellipsis;">{{this.description}}</div>
-            </div>
+            </a>
+
+            {{/each}}
         </div>
-        {{/each}}
+        <div id="news_result_section">
+            {{#each news_result}}
+            <a href="#">
+                <div class="row justify-content-center" style="padding: 10px;">
+                    <div class="col-2">
+                        <div class="d-flex justify-content-end">
+                            <img src={{this.thumbnail}} alt="">
+
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class=" title-search">{{this.title}}</div>
+                        <div class="author-search">{{this.date}}</div>
+                        <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.description}}</div>
+                    </div>
+                </div>
+            </a>
+
+            {{/each}}
+        </div>
+
         <nav>
             <ul class="pagination justify-content-center">
                 <li class="page-item">
@@ -79,3 +105,7 @@
 
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="/function/dropdown-search.js"></script>
