--- a/views/search.hbs
+++ b/views/search.hbs
@@ -22,6 +22,7 @@
             </form>
 
         </div>
+        <div id="book_result_section">
         <div class="row justify-content-center align-items-center" style="padding-top:10px">
             <div class="col-1"></div>
             <div class="col row justify-content-center">Có {{book_result.length}} kết quả</div>
@@ -42,68 +43,88 @@
             <div class="col row justify-content-center">+ Thêm bộ lọc</div>
             <div class="col-1"></div>
         </div>
-        <div id="book_result_section">
-            {{#each book_result}}
-            <a href="#">
-                <div class="row justify-content-center" style="padding: 10px;">
-                    <div class="col-2">
-                        <div class="d-flex justify-content-end">
-                            <img src={{this.thumbnail}} alt="" style="height: 150px;">
 
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class=" title-search">{{this.name}}</div>
-                        <div class="author-search">{{this.author}}</div>
-                        <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.description}}</div>
+        {{#each book_result}}
+        <a href="#">
+            <div class="row justify-content-center" style="padding: 10px;">
+                <div class="col-2">
+                    <div class="d-flex justify-content-end">
+                        <img src={{this.thumbnail}} alt="" style="height: 150px;">
+
                     </div>
                 </div>
-            </a>
-
-            {{/each}}
-        </div>
-        <div id="news_result_section">
-            {{#each news_result}}
-            <a href="#">
-                <div class="row justify-content-center" style="padding: 10px;">
-                    <div class="col-2">
-                        <div class="d-flex justify-content-end">
-                            <img src={{this.thumbnail}} alt="">
-
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class=" title-search">{{this.title}}</div>
-                        <div class="author-search">{{this.date}}</div>
-                        <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.description}}</div>
-                    </div>
+                <div class="col-8">
+                    <div class=" title-search">{{this.name}}</div>
+                    <div class="author-search">{{this.author}}</div>
+                    <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.description}}</div>
                 </div>
-            </a>
+            </div>
+        </a>
 
-            {{/each}}
-        </div>
-
-        <nav>
-            <ul class="pagination justify-content-center">
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-
+        {{/each}}
     </div>
+    <div id="news_result_section" style="display: none;">
+        <div class="row justify-content-center align-items-center" style="padding-top:10px">
+            <div class="col-1"></div>
+            <div class="col row justify-content-center">Có {{news_result.length}} kết quả</div>
+            <div class="row align-items-center justify-content-center col-6">
+                <div>Sắp xếp theo </div>
+
+                <div class="dropdown">
+                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_filtertype"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Độ phổ biến
+                    </button>
+                    <div id="dropdown_filtertype_content" class="dropdown-menu" aria-labelledby="dropdown_filtertype">
+                        <a class="dropdown-item" href="#">Độ phổ biến</a>
+                        <a class="dropdown-item" href="#">Gần nhất</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col row justify-content-center">+ Thêm bộ lọc</div>
+            <div class="col-1"></div>
+        </div>
+        {{#each news_result}}
+        <a href="#">
+            <div class="row justify-content-center" style="padding: 10px;">
+                <div class="col-2">
+                    <div class="d-flex justify-content-end">
+                        <img src={{this.thumbnail}} alt="">
+
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div class=" title-search">{{this.title}}</div>
+                    <div class="author-search">{{this.date}}</div>
+                    <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.description}}</div>
+                </div>
+            </div>
+        </a>
+
+        {{/each}}
+    </div>
+
+    <nav>
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
