--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
 <body>
   <header class="container-fluid header-nav fixed-top">
     <div class="row justify-content-between ">
-      <a class="navbar-brand no-padding-top-bot" href="#">
+      <a class="navbar-brand no-padding-top-bot" href="/">
         <img src="/images/logo-khoa.png" alt="" class="logo">
       </a>
       <nav class="navbar navbar-expand-sm navbar-light no-padding-top-bot ">
@@ -27,19 +27,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item nav-item-padding">
-              <a class="nav-link text-dark" href="#">Trang chủ</a>
+              <a class="nav-link text-dark" href="/">Trang chủ</a>
             </li>
             <li class="nav-item nav-item-padding">
-              <a class="nav-link text-dark" href="#">Thể loại</a>
+              <a class="nav-link text-dark" href="/categories">Thể loại</a>
             </li>
             <li class="nav-item nav-item-padding">
-              <a class="nav-link text-dark" href="#">Kho sách</a>
+              <a class="nav-link text-dark" href="/storage">Kho sách</a>
             </li>
             <li class="nav-item nav-item-padding">
-              <a class="nav-link text-dark" href="#">Giới thiệu</a>
+              <a class="nav-link text-dark" href="/about">Giới thiệu</a>
             </li>
-            <li class="nav-item active-nav nav-item-padding">
-              <a class="nav-link text-white" href="#">Đăng nhập</a>
+            <li class="nav-item nav-item-padding">
+              <a class="nav-link text-dark" href="/login">Đăng nhập</a>
             </li>
           </ul>
         </div>
