Hoàn thành gắn a href và đổi nav
- Như tiêu đề
- Đổi tên lại hàm function
- Cho phép truyền tham số vô change-nav, tránh tạo n js thực hiện 1 việc

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
       <a class="navbar-brand no-padding-top-bot" href="/">
         <img src="/images/logo-khoa.png" alt="" class="logo">
       </a>
-      <nav class="navbar navbar-expand-sm navbar-light no-padding-top-bot ">
+      <nav class="navbar navbar-expand-md navbar-light no-padding-top-bot ">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,6 +34,9 @@
             </li>
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="/storage">Kho sách</a>
+            </li>
+            <li class="nav-item nav-item-padding">
+              <a class="nav-link text-dark" href="/news">Tin tức</a>
             </li>
             <li class="nav-item nav-item-padding">
               <a class="nav-link text-dark" href="/about">Giới thiệu</a>
@@ -63,9 +66,9 @@
       <div class="link-info">
         <div class="title-footer">Thông tin</div>
         <div><a href="#" style="color: black;">Website khoa</a></div>
-        <div><a href="#"style="color: black;">Website trường</a></div>
+        <div><a href="#" style="color: black;">Website trường</a></div>
         <div><img src="/images/icon-fb.jpg" class="icon-footer"> <a href="#" style="color: black;">Facebook</a></div>
-        
+
       </div>
     </div>
   </footer>
