--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,3 @@
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 <div class="container padding-top-7-per" style="height: 35em;">
     <div class="login-area display-grid">
         <div class="login-input">
@@ -36,4 +35,4 @@
 
 
 <link rel="stylesheet" href="/stylesheets/login.css">
-{{!-- <script src="/function/loginFunction.js"></script> --}}
+<script src="/function/change-nav.js" current_page="Đăng nhập"></script>
