--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,3 +3,4 @@
         <div style="padding: 10px; font-size:20px">{{content}}</div>
     </div>
 </div>
+<script src="/function/change-nav.js" current_page="Giới thiệu"></script>
