--- a/views/forget-pass.hbs
+++ b/views/forget-pass.hbs
@@ -1,4 +1,3 @@
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 <div class="container padding-top-7-per" style="height: 35em;">
     <div class="forget-pass-area display-grid">
         <div class="forget-pass-input">
@@ -32,4 +31,4 @@
 
 
 <link rel="stylesheet" href="/stylesheets/forget-pass.css">
-{{!-- <script src="/function/loginFunction.js"></script> --}}
+<script src="/function/change-nav.js" current_page="Đăng nhập"></script>
