--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,4 +1,3 @@
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 <div class="container padding-top-7-per" style="height: 35em;">
     <div class="sign-up-area display-grid">
         <div class="sign-up-input">
@@ -35,4 +34,4 @@
 
 
 <link rel="stylesheet" href="/stylesheets/sign-up.css">
-{{!-- <script src="/function/loginFunction.js"></script> --}}
+<script src="/function/change-nav.js" current_page="Đăng nhập"></script>
