Thêm dummy a href xong
- Trang chủ, kho sách thì dùng a href bao hàm row, sau này phải chỉnh.
- Đăng nhập/ký/quên ok, tuy nhiên có thể design lại do thiếu thông báo.
- Nếu quá trình di chuyển qua nav thấy bị thụt ra vô, để ý do có thanh cuộn tay phải

--- a/views/book-detail.hbs
+++ b/views/book-detail.hbs
@@ -26,7 +26,8 @@
             </div>
         </div>
         <div class="feature-button text-center padding-top-3em">
-            <button class="borrow-button font-normal-bold">Mượn sách</button>
+            <a href="/carts"><button class="borrow-button font-normal-bold">Mượn sách</button></a>
+            
             <div style="display:block;">
                 <i class="fa fa-comments-o text-color-408CFF" aria-hidden="true"></i> <a href="#"
                     style="padding-left: 5px; color: #408CFF;">đánh giá</a><br>
