--- a/views/search.hbs
+++ b/views/search.hbs
@@ -45,7 +45,7 @@
         </div>
 
         {{#each book_result}}
-        <a href="#">
+        <a href="/book-detail">
             <div class="row justify-content-center" style="padding: 10px;">
                 <div class="col-2">
                     <div class="d-flex justify-content-end">
@@ -85,7 +85,7 @@
             <div class="col-1"></div>
         </div>
         {{#each news_result}}
-        <a href="#">
+        <a href="/news-detail">
             <div class="row justify-content-center" style="padding: 10px;">
                 <div class="col-2">
                     <div class="d-flex justify-content-end">
