--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -10,7 +10,10 @@
                     <input type="text" class="user-input" placeholder="password">
                 </div>
                 <div class="sign-up-but">
-                    <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                    <a href="/">
+                        <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                    </a>
+
                 </div>
             </div>
 
@@ -19,12 +22,16 @@
         <div class="login-area">
             <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
                 <div style="height: 55%;">
-                    <div>Chỉ áp dụng cho tài khoản cntt </div>
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per" style="line-height: 6;">Đã có tài khoản</span>
+                    {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
+                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per"
+                        style="line-height: 6;">Đã có tài khoản</span>
                 </div>
 
                 <div class="login">
-                    <button class="login-button font-normal-bold">Đăng Nhập</button>
+                    <a href="/login">
+                        <button class="login-button font-normal-bold">Đăng Nhập</button>
+                    </a>
+
                 </div>
 
             </div>
