--- a/views/forget-pass.hbs
+++ b/views/forget-pass.hbs
@@ -7,7 +7,11 @@
                     <input type="text" class="user-input" placeholder="Username">
                 </div>
                 <div class="forget-pass-but">
-                    <button class="forget-pass-button font-normal-bold">gửi</button>
+                    <a href="/">
+                        <button class="forget-pass-button font-normal-bold">
+                            <div style="width: 9ch;">Gửi</div>
+                        </button>
+                    </a>
                 </div>
             </div>
 
@@ -16,12 +20,16 @@
         <div class="login-area">
             <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
                 <div style="height: 53%;">
-                    <div>mail đổi mật khẩu sẽ được gửi trong 30s, nếu qua 12h chưa có vui lòng liên hệ support</div>
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per" style="line-height: 3;">Nhớ ra mật khẩu?</span>
+                    {{!-- <div>mail đổi mật khẩu sẽ được gửi trong 30s, nếu qua 12h chưa có vui lòng liên hệ support</div> --}}
+                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per"
+                        style="line-height: 3;">Nhớ ra mật khẩu?</span>
                 </div>
 
                 <div class="login">
-                    <button class="login-button font-normal-bold">Đăng nhập</button>
+                    <a href="/login">
+                        <button class="login-button font-normal-bold">Đăng nhập</button>
+                    </a>
+
                 </div>
 
             </div>
