--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,8 +10,11 @@
                     <input type="text" class="user-input" placeholder="password">
                 </div>
                 <div class="login-forget-pass">
-                    <button class="login-button font-normal-bold">Đăng nhập</button>
-                    <a href="#" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
+                    <a href="/">
+                        <button class="login-button font-normal-bold">Đăng nhập</button>
+                    </a>
+
+                    <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
                 </div>
             </div>
 
@@ -20,12 +23,16 @@
         <div class="sign-up-area">
             <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
                 <div style="height: 53%;">
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per" style="line-height: 7;">Chưa có tài
+                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per"
+                        style="line-height: 7;">Chưa có tài
                         khoản</span>
                 </div>
 
                 <div class="sign-up">
-                    <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                    <a href="/sign-up">
+                        <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                    </a>
+
                 </div>
 
             </div>
