--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -228,3 +228,19 @@ img {
 a {
     text-decoration: none !important;
 }
+
+.data-shown:after {
+    background-color: grey;
+    position: relative;
+    width: 100%;
+    height: 1px;
+    content: "";
+    display: block;
+    left: 0;
+    top: 8px;
+    margin: 0;
+}
+
+.padding-left-right-5em {
+    padding: 0 5em;
+}
